Bug 1731428 - Do not advertise DmaBuf support for Pipewire screen sharing, r=stransky

Right now we only support simple mem-copy from a given DmaBuf instead
of using the driver to get the data. This can fail in many ways, e.g.
if buffer modifiers are used.
Until we support proper handling of DmaBuf, stop advertising it to
Pipewire.

Differential Revision: https://phabricator.services.mozilla.com/D126824