third_party/libwebrtc/webrtc/modules/desktop_capture/linux/base_capturer_pipewire.cc
@@ -128,8 +128,7 @@ void BaseCapturerPipeWire::OnStreamParamChanged(void *data, uint32_t id,
   params[0] = reinterpret_cast<spa_pod *>(spa_pod_builder_add_object(&builder,
               SPA_TYPE_OBJECT_ParamBuffers, SPA_PARAM_Buffers,
               SPA_PARAM_BUFFERS_dataType, SPA_POD_CHOICE_FLAGS_Int((1<<SPA_DATA_MemPtr) |
-                                                                   (1<<SPA_DATA_MemFd) |
-                                                                   (1<<SPA_DATA_DmaBuf)),
+                                                                   (1<<SPA_DATA_MemFd)),
               SPA_PARAM_BUFFERS_size, SPA_POD_Int(size),
               SPA_PARAM_BUFFERS_stride, SPA_POD_Int(stride),
               SPA_PARAM_BUFFERS_buffers, SPA_POD_CHOICE_RANGE_Int(8, 1, 32)));
